[project]
requires-python = "<3.12,>=3.9"
name = "discord-modmail"
version = "4.3.3"
description = "A Modmail fork with a focus on improvements and bug fixes"
authors = [
    {name = "Raiden Sakura", email = "raiden@project-mei.xyz"},
    {name = "kyb3r", email = "noemail@example.com"},
    {name = "4jr", email = "noemail@example.com"},
    {name = "Taki", email = "noemail@example.com"},
]
dependencies = [
    "aiohttp[speedups]==3.9.1",
    "colorama~=0.4.5",
    "emoji~=1.7.0",
    "isodate~=0.6.0",
    "natural~=0.2.0",
    "parsedatetime~=2.6",
    "python-dateutil~=2.8.1",
    "python-dotenv~=1.0.0",
    "uvloop~=0.17.0; sys_platform != \"win32\"",
    "requests~=2.31.0",
    "attrs~=23.1.0",
    "strenum<1.0.0,>=0.4.15",
    "discord-py[speed]==2.4.0",
    "packaging<24.0,>=23.2",
    "typing-extensions<5.0.0,>=4.12.2",
    "motor>=3.5.1",
    "pymongo<4.9",
    "pip>=24.3.1",
]
readme = "README.md"
license = {text = "AGPL-3.0"}

[dependency-groups]
dev = [
    "black<24.0.0,>=23.12.0",
    "ruff<1.0.0,>=0.1.9",
    "tomli<3.0.0,>=2.0.1",
    "pre-commit<4.0.0,>=3.6.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["C90", "E", "F", "I001", "PGH004", "RUF100"]
ignore = ["F405", "E741", "C901", "F403", "E501"]
fixable = ["ALL"]
mccabe.max-complexity = 25
isort.combine-as-imports = true
unfixable = []

[tool.black]
line-length = "110"
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.venv
    | venv
    | venv2
    | _build
    | build
    | dist
    | plugins
    | temp
  )/
)
'''
